terraform/security_groups.tf
resource "aws_security_group" "app_sg" {
  name        = "flask-app-sg-${random_id.server_suffix.hex}"
  description = "Allow HTTP and SSH traffic"

  ingress {
    description = "Allow Flask App"
    from_port   = 5000
    to_port     = 5000
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    description = "Allow SSH"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
